--- a/style.css
+++ b/style.css
@@ -21,9 +21,11 @@ body{
 }
 
 @media (max-width:768px){
+
   .header {
     text-align: center;
   }
+  
 }
 
 .main{
@@ -42,19 +44,16 @@ body{
   display: flex;
 }
 
-#incomplete-tasks,
-#completed-tasks{
+#incomplete-tasks, #completed-tasks{
   margin: 0;
   padding: 0px;
 }
 
-.tasks__item,
-.title{
+.tasks__item, .title{
   list-style: none;
 }
 
-.tasks-input,
-.tasks-btn{
+.tasks-input, .tasks-btn{
   outline: none;
 }
 
@@ -73,8 +72,7 @@ body{
 }
 
 /* Heading */
-.title,
-.new-task-label{
+.title, .new-task-label{
   color: #333;
   font-weight: 700;
   font-size: 15px;
