refactor: add space after properties name according to rule 3.6

--- a/style.css
+++ b/style.css
@@ -1,63 +1,63 @@
 /* Basic Style */
-body{
+body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.header{
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.header img{
+.header-img {
   width: 100%;
 }
 
-.header .detail-link{
+.header .detail-link {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px){
+@media (max-width:768px) {
 
   .header {
     text-align: center;
   }
-  
+
 }
 
-.main{
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.add-task{
+.add-task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
 
-.add-task-wrapper{
+.add-task-wrapper {
   display: flex;
 }
 
-#incomplete-tasks, #completed-tasks{
+#incomplete-tasks, #completed-tasks {
   margin: 0;
   padding: 0px;
 }
 
-.tasks__item, .title{
+.tasks__item, .title {
   list-style: none;
 }
 
-.tasks-input, .tasks-btn{
+.tasks-input, .tasks-btn {
   outline: none;
 }
 
-.tasks-btn{
+.tasks-btn {
   background: none;
   border: 0px;
   color: #888;
@@ -67,12 +67,12 @@ body{
   cursor: pointer;
 }
 
-.tasks-btn:hover{
+.tasks-btn:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-.title, .new-task-label{
+.title, .new-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -82,7 +82,7 @@ body{
   text-transform: uppercase;
 }
 
-.tasks-input[type="text"]{
+.tasks-input[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -95,22 +95,22 @@ body{
   color: #888;
 }
 
-.tasks-input[type="text"]:focus{
+.tasks-input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task-label{
+.new-task-label {
   display: block;
   margin: 0 0 20px;
 }
 
-#new-task{
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-.tasks__item{
+.tasks__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -120,50 +120,50 @@ body{
   align-items: center;
 }
 
-.tasks__item>*{
+.tasks__item>* {
   vertical-align: middle;
 }
 
-.tasks-input[type="checkbox"]{
+.tasks-input[type="checkbox"] {
   margin: 0 10px;
 }
 
-.tasks__item>.tasks-label{
+.tasks__item>.tasks-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.tasks__item>.tasks-input[type="text"]{
+.tasks__item>.tasks-input[type="text"] {
   width: 226px
 }
 
-.delete-icon{
+.delete-icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.delete-icon:hover{
+.delete-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .tasks-label{
+#completed-tasks .tasks-label {
   text-decoration: line-through color: #888;
 }
 
 /* Edit Task */
-.tasks-input[type=text]{
+.tasks-input[type=text] {
   display: none
 }
 
-.edit-mode .tasks-input[type=text]{
+.edit-mode .tasks-input[type=text] {
   display: inline-block;
   width: 224px
 }
 
-.edit-mode .tasks-label{
+.edit-mode .tasks-label {
   display: none;
 }
